build: :rocket: Criação das entidades
Criadas as entidades iniciais do programa

--- a/stocktrade/src/main/resources/application.properties
+++ b/stocktrade/src/main/resources/application.properties
@@ -1,5 +1,2 @@
-#datasource
-spring.datasource.url=jdbc:postgresql://localhost:5432/stockTrade
-spring.datasource.username=postgres
-spring.datasource.password=dUd8zewr!
-spring.jpa.hibernate.ddl-auto=update
+spring.profiles.active=test
+spring.jpa.open-in-view=true
