feat: :lock: Adicionada hash e salt das senhas
Hash e senha adicionados na superclasse Usuário, tanto a senha normal quanto a senha de autenticação possuem essa segurança

17

--- a/stocktrade/src/main/resources/application-test.properties
+++ b/stocktrade/src/main/resources/application-test.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/stockTrade
 spring.datasource.username=postgres
-spring.datasource.password=dUd8zewr!
+spring.datasource.password=1234
 spring.jpa.hibernate.ddl-auto=update
 
 
