--- a/stocktrade/pom.xml
+++ b/stocktrade/pom.xml
@@ -28,10 +28,11 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-thymeleaf -->
 		<dependency>
-    		<groupId>org.thymeleaf</groupId>
-    		<artifactId>thymeleaf</artifactId>
-    		<version>3.1.2.RELEASE</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+			<version>3.1.3</version>
 		</dependency>
 
 		<dependency>
