--- a/stocktrade/pom.xml
+++ b/stocktrade/pom.xml
@@ -35,6 +35,12 @@
 			<version>3.1.3</version>
 		</dependency>
 
+    	<dependency>
+        	<groupId>org.springframework.boot</groupId>
+        	<artifactId>spring-boot-devtools</artifactId>
+        	<optional>true</optional>
+    	</dependency>
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
