feat: :lock: Adesão Aspect Logging
Adicionado o aspecto de logging para registro das atividades no sistema

--- a/stocktrade/pom.xml
+++ b/stocktrade/pom.xml
@@ -70,6 +70,19 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjrt</artifactId>
+			<version>1.9.7</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjweaver</artifactId>
+			<version>1.9.7</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
