--- a/stocktrade/pom.xml
+++ b/stocktrade/pom.xml
@@ -57,6 +57,7 @@
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
+			<version>42.6.0</version>
 		</dependency>
 
 		<dependency>
