--- a/stocktrade/src/main/resources/application-test.properties
+++ b/stocktrade/src/main/resources/application-test.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/stockTrade
 spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.password=dUd8zewr!
 spring.jpa.hibernate.ddl-auto=update
 
 
