--- a/stocktrade/pom.xml
+++ b/stocktrade/pom.xml
@@ -84,6 +84,12 @@
 			<version>1.9.7</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
